EN-566: Import Dockerfile and docker-compose (patch)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,5 @@ services:
   pipeline-checkov:
     build:
       context: ./
-    ports:
-      # HTTP
-      - "80:80"
+    volumes:
+      - ".submodules/terragoat:/workspace/"
