EN-566: Remove entrypoint from Dockerfile (fix)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,6 @@ services:
   pipeline-checkov:
     build:
       context: ./
+    command: npx @quantum-sec/ci-analysis-collector checkov --path /workspace/
     volumes:
       - ".submodules/terragoat:/workspace/"
