--- a/ci/azure/Dockerfile
+++ b/ci/azure/Dockerfile
@@ -1,5 +1,5 @@
 FROM quantumsec/docker-pipeline-checkov:latest
 
-# Bash is required by Azure DevOps
+# Azure DevOps has specific container requirements not met by the base image.
 # See: https://docs.microsoft.com/en-us/azure/devops/pipelines/process/container-phases?view=azure-devops#requirements
-RUN apk add --update bash
+RUN apk add --update bash libc6-compat
