--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,6 @@ services:
   pipeline-checkov:
     build:
       context: ./
-    command: npx @quantum-sec/ci-analysis-collector checkov --path /workspace/
+    command: npx --yes --package '@quantum-sec/ci-analysis-collector' --call 'ci-analysis-collector checkov --path /workspace/'
     volumes:
       - ".submodules/terragoat:/workspace/"
